# historical-chat

./: .dockerignore  .env.example  CONNECTION_TROUBLESHOOTING.md  DOWNLOAD_INFO.md  Dockerfile.backend  Dockerfile.frontend  EXPORT_MANIFEST.txt  LOCAL_SETUP.md  QUICKSTART.md  QUICK_LOCAL_START.md  QUICK_REFERENCE.md  QUICK_RENDER_DEPLOY.md  README.md  RENDER_DEPLOYMENT.md  RENDER_READY.md  START_GUIDE.md  THREE_STEPS.md  docker-compose.yml  nginx.conf  pyproject.toml  render.yaml  requirements.txt
api/: index.py
assets/: historical_figures.json
config/: agent_llm_config.json
docs/: 3D_API.md  API.md  DEPLOY_SERVERLESS.md  LOCAL_DEPLOYMENT.md  PYTHON_TROUBLESHOOTING.md  QUICK_START.md  VOICE_API.md  WINDOWS_SCRIPT_GUIDE.md
frontend/: README.md  access.html  connection-test.html  index.html  test.html
scripts/: auto_start.bat  check_deployment.bat  check_deployment.sh  check_deployment_safe.bat  diagnose_python.bat  export_files.sh  fix_python.bat  package.sh  quick_start.sh  run_check.bat  setup_windows.bat  start_all.sh  start_api.sh  test_3d.py  test_api.py  test_setup.bat  test_voice.py  test_websocket.py
src/: app.py  fix_all_imports.py
src/agents/: agent.py
src/api/routes/: chat.py  figures.py  model3d.py  voice.py  websocket.py
src/storage/memory/: __init__.py  memory_saver.py
src/tools/: historical_figure_tool.py
