[project]
name = "historical-chat"
version = "0.1.0"
description = "Historical figures chat system"
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.1",
    "python-multipart==0.0.9",
    "websockets==12.0",
    "httpx==0.26.0",
    "aiohttp==3.9.1",
    "aiofiles==23.2.1",
    "langchain==0.3.15",
    "langchain-core==0.3.30",
    "langchain-openai==0.2.15",
    "langgraph==0.2.55",
    "openai==1.59.13",
    "gTTS==2.5.4",
    "duckduckgo-search==4.2.0",
    "pydantic==2.6.4",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "loguru==0.7.2",
]
